--- a/SalaryBySurasak/SalaryBySurasak.vbproj
+++ b/SalaryBySurasak/SalaryBySurasak.vbproj
@@ -97,6 +97,12 @@
     <Compile Include="frmLab11.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmLab12.Designer.vb">
+      <DependentUpon>frmLab12.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmLab12.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmLab2.Designer.vb">
       <DependentUpon>frmLab2.vb</DependentUpon>
     </Compile>
@@ -222,6 +228,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLab11.resx">
       <DependentUpon>frmLab11.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmLab12.resx">
+      <DependentUpon>frmLab12.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLab2.resx">
       <DependentUpon>frmLab2.vb</DependentUpon>
