--- a/SalaryBySurasak/SalaryBySurasak.vbproj
+++ b/SalaryBySurasak/SalaryBySurasak.vbproj
@@ -199,6 +199,12 @@
     <Compile Include="frmPractice8.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmProj.Designer.vb">
+      <DependentUpon>frmProj.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmProj.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -279,6 +285,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPractice8.resx">
       <DependentUpon>frmPractice8.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmProj.resx">
+      <DependentUpon>frmProj.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
